make background attachment fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -248,4 +248,7 @@
     .nav {
         display: none;
     }
+    .homepage, .about, .projects, .contact {
+    background-attachment: fixed;
+  }
 }
